--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body style="background-image: url(assets/home-background.gif);">
+<body class="background" style="background-image: url(assets/home-background.gif);">
     <div class="filter" style="background-image: url('assets/pixels.jpg')"></div>
     <div class="earth" style="background-image: url('assets/awge-home.gif');"></div>
     <div class="border" style="background-image: url('assets/stretched-border.png')"></div>
     <div id="clock" class="clock">00:00 UTC+0</div>
-    <div id="text" class="text">" Full Circle "</div>
+    <div id="text" class="text">Yeah</div>
 </body>
 </html>
