--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>[.wav]</title>
+    <title>✯✯✯</title>
     <link rel="icon" href="assets/yandhi.ico"
     <meta charset="UTF-8">
     <meta name="viewport">
@@ -13,6 +13,6 @@
     <div class="earth" style="background-image: url('assets/awge-home.gif');"></div>
     <div class="border" style="background-image: url('assets/stretched-border.png')"></div>
     <div id="clock" class="clock">00:00 UTC+0</div>
-    <div id="text" class="text">Yeah</div>
+    <div id="text" class="text">"sample text"</div>
 </body>
 </html>
