--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <div class="earth" style="background-image: url('assets/awge-home.gif');"></div>
     <div class="border" style="background-image: url('assets/stretched-border.png')"></div>
     <div id="clock" class="clock">00:00 UTC+0</div>
-    <div id="text" class="text">"sample text"</div>
+    <img id="spotify" class="spotify" src="assets/spotifytransred.png">
 </body>
 </html>
