--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="background" style="background-image: url(assets/home-background.gif);">
+<body class="background" style="background-image: url(assets/legif.gif);">
     <div class="filter" style="background-image: url('assets/pixels.jpg')"></div>
     <div class="earth" style="background-image: url('assets/awge-home.gif');"></div>
     <div class="border" style="background-image: url('assets/stretched-border.png')"></div>
     <div id="clock" class="clock">00:00 UTC+0</div>
+    <div id="message" class="message">© 2021</div>
     <img id="spotify" class="spotify" src="assets/spotifytransred.png">
 </body>
 </html>
