--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/bdle.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="background" style="background-image: url(assets/legif.gif);">
