--- a/index.html
+++ b/index.html
@@ -5,15 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="js/bdle.js"></script>
+    <script src="js/bdle2.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="background" style="background-image: url(assets/legif.gif);">
-    <div class="filter" style="background-image: url('assets/pixels.jpg')"></div>
-    <div class="earth" style="background-image: url('assets/awge-home.gif');"></div>
-    <div class="border" style="background-image: url('assets/stretched-border.png')"></div>
-    <div id="clock" class="clock">00:00 UTC+0</div>
-    <div id="message" class="message">© 2021</div>
-    <img id="spotify" class="spotify" src="assets/spotifytransred.png">
+<body>
+    <label for="password">Enter Password</label>
+    <input id="password" type="text">
+    <button id="enter" onclick="main()">Enter</button>
 </body>
 </html>
