--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <label for="password">Enter Password</label>
     <input id="password" type="text">
-    <button id="enter">Entere</button>
+    <button id="enter">Enteree</button>
 </body>
 </html>
