--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <label for="password">Enter Password</label>
-    <input id="password" type="text">
+    <input id="password" type="password">
     <button id="enter">Enter</button>
 </body>
 </html>
