--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <label for="password">Enter Password</label>
     <input id="password" type="password">
     <button id="enter">Enter</button>
+    <label id="resp"></label>
 </body>
 </html>
