--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <label for="password">Enter Password</label>
     <input id="password" type="password">
+    <br>
+    <label for="pkey">Enter Pkey</label>
+    <input id="pkey" type="text">
+    <br>
     <button id="enter">Enter</button>
+    <br>
     <label id="resp"></label>
 </body>
 </html>
