--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <label for="pkey">Enter Pkey</label>
     <input id="pkey" type="text">
     <br>
+    <label for="ss">Enter StartSerial</label>
+    <input id="ss" type="number">
+    <br>
+    <label for="count">Enter Count</label>
+    <input id="count" type="number">
+    <br>
     <button id="enter">Enter</button>
     <br>
     <label id="resp"></label>
