--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <label for="pkey">Enter Pkey</label>
     <input id="pkey" type="text">
     <br>
+    <label for="colltoken">Enter Collection Token</label>
+    <input id="colltoken" type="text">
+    <br>
+    <label for="offeramount">Enter Price</label>
+    <input id="offeramount" type="text">
+    <br>
     <label for="ss">Enter StartSerial</label>
     <input id="ss" type="number">
     <br>
