--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
     <label for="offeramount">Enter Price</label>
     <input id="offeramount" type="text">
     <br>
+    <label for="serials">Enter Serials</label>
+    <input id="serials" type="text">
+    <br>
     <label for="ss">Enter StartSerial</label>
     <input id="ss" type="number">
     <br>
     <label for="count">Enter Count</label>
     <input id="count" type="number">
+    <br>
+    <label for="expiry">Enter expiry (Hours)</label>
+    <input id="expiry" type="number">
     <br>
     <button id="enter">Enter</button>
     <br>
