--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <br>
     <button id="enter">Enter</button>
     <br>
+    <button id="pause">Pause</button>
+    <br>
     <label id="resp"></label>
 </body>
 </html>
