--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
     <label for="count">Enter Count</label>
     <input id="count" type="number">
     <br>
-    <label for="expiry">Enter expiry (Hours)</label>
+    <label for="expiry">Enter Expiry (Hours)</label>
     <input id="expiry" type="number">
     <br>
     <button id="enter">Enter</button>
-    <br>
-    <button id="pause">Pause</button>
-    <br>
     <label id="resp"></label>
 </body>
 </html>
