--- a/index.html
+++ b/index.html
@@ -9,31 +9,85 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <label for="password">Enter Password</label>
-    <input id="password" type="password">
-    <br>
-    <label for="pkey">Enter Pkey</label>
-    <input id="pkey" type="text">
-    <br>
-    <label for="colltoken">Enter Collection Token</label>
-    <input id="colltoken" type="text">
-    <br>
-    <label for="offeramount">Enter Price</label>
-    <input id="offeramount" type="text">
-    <br>
-    <label for="serials">Enter Serials</label>
-    <input id="serials" type="text">
-    <br>
-    <label for="ss">Enter StartSerial</label>
-    <input id="ss" type="number">
-    <br>
-    <label for="count">Enter Count</label>
-    <input id="count" type="number">
-    <br>
-    <label for="expiry">Enter Expiry (Hours)</label>
-    <input id="expiry" type="number">
-    <br>
-    <button id="enter">Enter</button>
-    <label id="resp"></label>
+    <div id="split left">
+        <label for="password">Enter Password</label>
+        <input id="password" type="password">
+        <br>
+        <label for="pkey">Enter Pkey</label>
+        <input id="pkey" type="text">
+        <br>
+        <label for="colltoken">Enter Collection Token</label>
+        <input id="colltoken" type="text">
+        <br>
+        <label for="offeramount">Enter Price</label>
+        <input id="offeramount" type="text">
+        <br>
+        <label for="serials">Enter Serials</label>
+        <input id="serials" type="text">
+        <br>
+        <label for="expiry">Enter Expiry (Hours)</label>
+        <input id="expiry" type="number">
+        <br>
+        <button id="enter">Enter</button>
+        <label id="resp"></label>
+    </div>
+    <div id="split right">
+        <label id="collection_name">Claylings</label>
+        <br>
+        <label id="token_address">Address: 0x...</label>
+        <br>
+        <br>
+        <label id="floor_price">Floor Price: 0.18</label>
+        <br>
+        <label id="listing_count">Listing Count: 1234</label>
+        <br>
+        <label id="bid_count">Bid Count: 1134</label>
+        <br>
+        <br>
+        <label id="0.05_bbc"></label>
+        <br>
+        <label id="0.10_bbc"></label>
+        <br>
+        <label id="0.15_bbc"></label>
+        <br>
+        <label id="0.20_bbc"></label>
+        <br>
+        <label id="0.25_bbc"></label>
+        <br>
+        <label id="0.30_bbc"></label>
+        <br>
+        <label id="0.35_bbc"></label>
+        <br>
+        <label id="0.40_bbc"></label>
+        <br>
+        <label id="0.45_bbc"></label>
+        <br>
+        <label id="0.50_bbc"></label>
+        <br>
+        <label id="0.55_bbc"></label>
+        <br>
+        <label id="0.60_bbc"></label>
+        <br>
+        <label id="0.65_bbc"></label>
+        <br>
+        <label id="0.70_bbc"></label>
+        <br>
+        <label id="0.75_bbc"></label>
+        <br>
+        <label id="0.80_bbc"></label>
+        <br>
+        <label id="0.85_bbc"></label>
+        <br>
+        <label id="0.90_bbc"></label>
+        <br>
+        <label id="0.95_bbc"></label>
+        <br>
+        <label id="1.00_bbc"></label>
+        <br>
+        <br>
+        <label id="updated_at">Updated At:</label>
+        <br>
+        <button id="fetch">Fetch collection data</button>
+    </div>
 </body>
 </html>
