--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
         <label for="expiry">Enter Expiry (Hours)</label>
         <input id="expiry" type="number">
         <br>
+        <button id="fetch">Fetch collection data</button>
+        <br>
         <button id="enter">Enter</button>
         <label id="resp"></label>
     </div>
     <div id="split right">
-        <label id="collection_name">Claylings</label>
+        <label id="collection_name"></label>
         <br>
-        <label id="token_address">Address: 0x...</label>
+        <label id="token_address"></label>
         <br>
         <br>
-        <label id="floor_price">Floor Price: 0.18</label>
+        <label id="floor_price"></label>
         <br>
-        <label id="listing_count">Listing Count: 1234</label>
+        <label id="listing_count"></label>
         <br>
-        <label id="bid_count">Bid Count: 1134</label>
+        <label id="bid_count"></label>
         <br>
         <br>
         <label id="0.05_bbc"></label>
@@ -85,9 +87,8 @@
         <label id="1.00_bbc"></label>
         <br>
         <br>
-        <label id="updated_at">Updated At:</label>
+        <label id="updated_at"></label>
         <br>
-        <button id="fetch">Fetch collection data</button>
     </div>
 </body>
 </html>
