--- a/index.html
+++ b/index.html
@@ -41,50 +41,53 @@
         <br>
         <label id="floor_price"></label>
         <br>
+        <label for="floor_override">Override Floor</label>
+        <input id="floor_override" type="text">
+        <br>
         <label id="listing_count"></label>
         <br>
         <label id="bid_count"></label>
         <br>
         <br>
-        <label id="0.05_bbc"></label>
+        <label id="0.05"></label>
         <br>
-        <label id="0.10_bbc"></label>
+        <label id="0.1"></label>
         <br>
-        <label id="0.15_bbc"></label>
+        <label id="0.15"></label>
         <br>
-        <label id="0.20_bbc"></label>
+        <label id="0.2"></label>
         <br>
-        <label id="0.25_bbc"></label>
+        <label id="0.25"></label>
         <br>
-        <label id="0.30_bbc"></label>
+        <label id="0.3"></label>
         <br>
-        <label id="0.35_bbc"></label>
+        <label id="0.35"></label>
         <br>
-        <label id="0.40_bbc"></label>
+        <label id="0.4"></label>
         <br>
-        <label id="0.45_bbc"></label>
+        <label id="0.45"></label>
         <br>
-        <label id="0.50_bbc"></label>
+        <label id="0.5"></label>
         <br>
-        <label id="0.55_bbc"></label>
+        <label id="0.55"></label>
         <br>
-        <label id="0.60_bbc"></label>
+        <label id="0.6"></label>
         <br>
-        <label id="0.65_bbc"></label>
+        <label id="0.65"></label>
         <br>
-        <label id="0.70_bbc"></label>
+        <label id="0.7"></label>
         <br>
-        <label id="0.75_bbc"></label>
+        <label id="0.75"></label>
         <br>
-        <label id="0.80_bbc"></label>
+        <label id="0.8"></label>
         <br>
-        <label id="0.85_bbc"></label>
+        <label id="0.85"></label>
         <br>
-        <label id="0.90_bbc"></label>
+        <label id="0.9"></label>
         <br>
-        <label id="0.95_bbc"></label>
+        <label id="0.95"></label>
         <br>
-        <label id="1.00_bbc"></label>
+        <label id="1"></label>
         <br>
         <br>
         <label id="updated_at"></label>
