--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <br>
         <button id="fetch">Fetch collection data</button>
         <br>
+        <button id="decentramode">Decentramode</button>
+        <br>
         <button id="enter">Enter</button>
         <label id="resp"></label>
     </div>
