--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <br>
         <button id="decentramode">Decentramode</button>
         <br>
+        <button id="sandymode">Sandymode</button>
+        <br>
         <button id="enter">Enter</button>
         <label id="resp"></label>
     </div>
