--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <label for="expiry">Enter Expiry (Hours)</label>
         <input id="expiry" type="number">
         <br>
+        <label for="sleep">Enter Sleep (ms)</label>
+        <input id="sleep" type="text">
+        <br>
         <button id="fetch">Fetch collection data</button>
         <br>
         <button id="decentramode">Decentramode</button>
