--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <label for="expiry">Enter Expiry (Hours)</label>
         <input id="expiry" type="number">
         <br>
-        <label for="sleep">Enter Sleep (ms)</label>
+        <label for="sleep">Enter Sleep (Ms)</label>
         <input id="sleep" type="text">
         <br>
         <button id="fetch">Fetch collection data</button>
