--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <label for="expiry">Enter Expiry (Hours)</label>
         <input id="expiry" type="number">
         <br>
+        <label for="apikey">Enter api key</label>
+        <input id="apikey" type="text">
+        <br>
         <label for="sleep">Enter Sleep (Ms)</label>
         <input id="sleep" type="text">
         <br>
