--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
 </head>
 <body>
     <div id="split left">
-        <label for="password">Enter Password</label>
+        <label for="password">Password</label>
         <input id="password" type="password">
         <br>
-        <label for="pkey">Enter Pkey</label>
+        <label for="pkey">Pkey</label>
         <input id="pkey" type="text">
         <br>
-        <label for="colltoken">Enter Collection Token</label>
+        <label for="colltoken">Collection Token</label>
         <input id="colltoken" type="text">
         <br>
-        <label for="offeramount">Enter Price</label>
+        <label for="offeramount">Price</label>
         <input id="offeramount" type="text">
         <br>
-        <label for="serials">Enter Serials</label>
+        <label for="serials">Serials</label>
         <input id="serials" type="text">
         <br>
-        <label for="expiry">Enter Expiry (Hours)</label>
+        <label for="startindex">Start Index (Hours)</label>
+        <input id="startindex" type="text"
+        <br>
+        <label for="expiry">Expiry (Hours)</label>
         <input id="expiry" type="number">
         <br>
-        <label for="apikey">Enter api key</label>
+        <label for="apikey">Api key</label>
         <input id="apikey" type="text">
         <br>
-        <label for="sleep">Enter Sleep (Ms)</label>
+        <label for="sleep">Sleep (Ms)</label>
         <input id="sleep" type="text">
         <br>
         <button id="fetch">Fetch collection data</button>
@@ -42,6 +45,7 @@
         <br>
         <button id="enter">Enter</button>
         <label id="resp"></label>
+        <label id="lolso">Sorry fer allda inputs</label>
     </div>
     <div id="split right">
         <label id="collection_name"></label>
