--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 </head>
 <body>
     <div id="split left">
-        <label for="password">Password</label>
+        <label for="password">Enter Password</label>
         <input id="password" type="password">
         <br>
-        <label for="pkey">Pkey</label>
+        <label for="pkey">Enter Pkey</label>
         <input id="pkey" type="text">
         <br>
-        <label for="colltoken">Collection Token</label>
+        <label for="colltoken">Enter Collection Token</label>
         <input id="colltoken" type="text">
         <br>
-        <label for="offeramount">Price</label>
+        <label for="offeramount">Enter Price</label>
         <input id="offeramount" type="text">
         <br>
-        <label for="serials">Serials</label>
+        <label for="serials">Enter Serials</label>
         <input id="serials" type="text">
         <br>
-        <label for="startindex">Start Index (Hours)</label>
-        <input id="startindex" type="text"
+        <label for="startindex">Enter Start Index (Hours)</label>
+        <input id="startindex" type="text">
         <br>
-        <label for="expiry">Expiry (Hours)</label>
+        <label for="expiry">Enter Expiry (Hours)</label>
         <input id="expiry" type="number">
         <br>
-        <label for="apikey">Api key</label>
+        <label for="apikey">Enter Api key</label>
         <input id="apikey" type="text">
         <br>
-        <label for="sleep">Sleep (Ms)</label>
+        <label for="sleep">Enter Sleep (Ms)</label>
         <input id="sleep" type="text">
         <br>
         <button id="fetch">Fetch collection data</button>
