--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <label for="serials">Enter Serials</label>
         <input id="serials" type="text">
         <br>
-        <label for="startindex">Enter Start Index (Hours)</label>
+        <label for="startindex">Enter Start Index</label>
         <input id="startindex" type="text">
         <br>
         <label for="expiry">Enter Expiry (Hours)</label>
