--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <label for="colltoken">Enter Collection Token</label>
         <input id="colltoken" type="text">
         <br>
-        <label for="offeramount">Enter Price</label>
+        <label for="offeramount">Enter Base Bid</label>
         <input id="offeramount" type="text">
+        <label for="maxbid">Enter Max Bid (dynamic)</label>
+        <input id="maxbid" type="text">
         <br>
         <label for="serials">Enter Serials</label>
         <input id="serials" type="text">
