--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <label id="1"></label>
         <br>
         <br>
-        <label id="updated_at"></label>
+        <label id="updated_at">v1.0.1</label>
         <br>
     </div>
 </body>
