--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="js/bundled.js"></script>
+    <script src="js/source.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -44,6 +44,9 @@
         <button id="decentramode">Decentramode</button>
         <br>
         <button id="sandymode">Sandymode</button>
+        <br>
+        <input type="checkbox" id="listingsonly" value="1">
+        <label for="listingsonly">Listings only</label>
         <br>
         <button id="enter">Enter</button>
         <label id="resp"></label>
